// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Voucherify's pageEvent destination action: all fields 1`] = `
Object {
  "metadata": Object {
    "testType": "Tx8Ea621(e^4z&*M",
  },
  "name": "Tx8Ea621(e^4z&*M",
  "source_id": "Tx8Ea621(e^4z&*M",
  "type": "Tx8Ea621(e^4z&*M",
}
`;

exports[`Testing snapshot for Voucherify's pageEvent destination action: required fields 1`] = `
Object {
  "name": "Tx8Ea621(e^4z&*M",
  "source_id": "Tx8Ea621(e^4z&*M",
}
`;
